analytics for QA ; WIP
